--- a/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
+++ b/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd
@@ -1,7 +1,7 @@
 ---
-title: Evaluating Product Prices (Part 1)
+title: Linear Regression in Pricing Analysis, Essential Things to Know
 author: Bryan Shalloway
-date: '2020-08-11'
+date: '2020-08-17'
 categories:
   - business
   - programming
@@ -13,35 +13,36 @@ tags:
 slug: pricing-insights-from-historical-data-part-1
 ---
 
+```{r setup, echo=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, cache = TRUE)
+```
 
->"All models are wrong, but some are useful." -George Box
+**Pricing is hard.**
 
-# Problem context
+![](https://media2.giphy.com/media/SG0KKFtwUpqJW/giphy.gif)
 
-Setting prices for large complicated products is challenging, particularly in [business to business](link to helpful resource) (B2B) contexts. B2B sellers may lack information, e.g. accurate estimates of customer budget or 'street' prices for the various configurations of their products. However they typically *do have* historical data on internal sales transactions as well as leadership with a strong desire for *insights* into pricing behavior. The [Pricing challenges] section discusses potential internal and external limitations in setting prices. For now I'll put aside the question of *how* to set prices. Instead, I’ll walk through some statistical methods that rely only on historical sales information and that can be used to evaluate differences, trends, and abnormalities in your organizations pricing.
+Setting prices for large complicated products is challenging, particularly in Business to Business sales (B2B). B2B sellers may lack important information (e.g. accurate estimates of customer budget or 'street' prices for the various configurations of their products). However they typically *do have* historical data on internal sales transactions as well as leadership with a strong desire for *insights* into pricing behavior. The [Pricing challenges] section discusses potential internal and external limitations in setting prices. For now I'll put aside the question of how to use econometric approaches to set ideal prices. Instead, I’ll walk through some statistical methods that rely only on historical sales information and that can be used for analyzing differences, trends, and abnormalities in your organizations pricing.
 
-With internal data^[Internal sales data alone is limited in that its focused on only a component of sales, rather than considering the full picture -- this puts the analyst in a familiar position of one with incomplete information, and a constrained scope of influence.] you can still support answers to many important questions and provide a starting place towards more sophisticated pricing strategies or analyses. In a series of posts I will tackle the following questions:
+With internal data^[Internal sales data alone is limited in that its focused on only a component of sales, rather than considering the full picture -- this puts the analyst in a familiar position of one with incomplete information, and a constrained scope of influence.] you can still support answers to many important questions and provide a starting place towards more sophisticated pricing strategies or analyses. I will be writing a series of posts on pricing (see section [Future pricing posts] for likely topics). In this post, I will focus on the basic ideas important to using regression models to understand prices and some of the considerations in model fitting (that are particularly important in these contexts). 
 
-1. How do differences in product components associate with differenes in price? What is the magnitude of the influence of these factors?
-1. How have these factors changed over time?
-1. Which customers fall outside the 'normal' behavior in regard to the price they are receiving?
-1. How can complexities in pricing strategy be captured by a statistically rigorous modeling framework? (E.g. when volume dictates price)
-
-In this post, I will focus on question one. For my examples, I will use data from the Ames, Iowa housing market. See the [Dataset considerations] section for why I use the [ames](link to make_ames function) dataset as an analogue for B2B selling / pricing scenarios (as well as problems with this choice). My examples were built using the R programming language, you can find the source code at [my github]() page.
+I will use data from the Ames, Iowa housing market. See the [Dataset considerations] section for why I use the [ames](https://cran.r-project.org/web/packages/AmesHousing/AmesHousing.pdf) dataset as an analogue for B2B selling / pricing scenarios (as well as problems with this choice). My examples were built using the R programming language, you can find the source code at my [github page](https://github.com/brshallo/brshallo/blob/master/content/post/2020-08-11-pricing-insights-from-historical-data-part-1.Rmd).
 
 # What influeces price?
 
-**Dollars per unit:**
+Products have features. These features^[Dataset should be structured such that each feature is a column and each row an observation, e.g. a sale.] can be used to train a model to estimate price. For a linear model, the outputted coefficents associated with these features can act as proxies for the expected *dollar per unit* change associated with the component^[Sort of, and under certain contexts...] ([ceteris paribus](https://en.wikipedia.org/wiki/Ceteris_paribus)). In pricing contexts, the idea that regression coefficients relate to the value (i.e. 'implicit price') of the constituent components of the product is sometimes called hedonic modeling^[https://en.wikipedia.org/wiki/Hedonic_regression]. An assumption in hedonic modeling is that our model includes all variables that matter to price^[Missing important components or misattributing influence of price can cause bias in the model (omitted variable bias).]. This assumption is important in that it suggests:
 
-Products have features. These features^[Dataset should be structured such that each feature is a column and each row an observation, e.g. a sale] can be used to train a model to estimate price. For a linear model, the outputted coefficents associated with these features can (sort of) act as proxies for the expected *dollar per unit* change associated with the component ([ceteris paribus](https://en.wikipedia.org/wiki/Ceteris_paribus)). 
+1. Regression modeling of price is not well suited to contexts where you cannot explain a reasonably high proportion of the variance in the price of your product.
+1. You should be particularly thoughtful regarding the variables you include in your model. E.g. you prefer the variables to be discrete from one another.
 
-```{r}
+For a more full discussion on hedonic modeling and how it can also be used in setting price indices see the [Handbook on Residential Property Prices Indices](https://www.oecd-ilibrary.org/docserver/9789264197183-7-en.pdf?expires=1597241573&id=id&accname=guest&checksum=0FA9E2EB249B3EB5DBA108E3AC44CCA3). In this post I will build very simple models that obviously don't represent all relevant factors or meet some of the strong assumptions in hedonic modeling contexts^[My focus instead is on illustrating some basic considerations in regression modeling that are particular important in pricing contexts.]. 
+
+```{r load-packages}
 library(tidymodels)
 library(tidyverse)
 library(AmesHousing)
 ```
 
-```{r}
+```{r load-data}
 ames <- AmesHousing::make_ames()
 
 ames <- ames %>% 
@@ -49,133 +50,143 @@ ames <- ames %>%
          total_sqft = Gr_Liv_Area + Bsmt_Unf_SF)
 ```
 
-Let's build a simple model for home price that uses *just* house square footage (not including basement), represented by `Gr_Liv_Area` as a feature for predicting home price. 
+## Simple linear regression model
+
+Let's build a model for home price that uses *just* house square footage, represented by `Gr_Liv_Area`^[Does not including basement.], as a feature for predicting home price. 
 
 ```{r simple-model-equation, results = 'asis'}
 mod_sqft <- lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 
-mod_sqft_noint <- lm(Sale_Price ~ Gr_Liv_Area - 1, data = ames)
+# mod_sqft_noint <- lm(Sale_Price ~ Gr_Liv_Area - 1, data = ames)
 
-mod_gr_latex <- equatiomatic::extract_eq(mod_sqft, use_coefs = TRUE, coef_digits = 1)
+mod_gr_latex <- equatiomatic::extract_eq(mod_sqft, use_coefs = TRUE, coef_digits = 0)
 
 mod_gr_latex
 ```
 
-The coefficient on sale price of *111.7* is a measure of expected dollars per unit change in square foot. If you build the model without an intercept^[I.e. make it zero so that the expected value of a house of 0 square foot is $0], the coefficient more directly equates to dollars per square foot^[In this case, the coefficient for the model becomes 119.7 if the intercept is set to zero.]. However it's *almost always* more appropriate to [leave the intercept in the model](https://stats.stackexchange.com/questions/7948/when-is-it-ok-to-remove-the-intercept-in-a-linear-regression-model).
+The coefficient on sale price of *111.7* is a measure of expected dollars per unit change in square foot. If you build the model without an intercept^[I.e. make it zero so that the expected value of a house of 0 square foot is $0], the coefficient more directly equates to dollars per square foot^[In this case, the coefficient for the model becomes 119.7 if the intercept is set to zero.]. However it's *typically* more appropriate to [leave the intercept in the model](https://stats.stackexchange.com/questions/7948/when-is-it-ok-to-remove-the-intercept-in-a-linear-regression-model)^[Hedonic modeling also has a variety of approaches associated with evaluating changes in the intercept term between models that (again) can be read in the the [Handbook on Residential Property Prices Indices](https://www.oecd-ilibrary.org/docserver/9789264197183-7-en.pdf?expires=1597241573&id=id&accname=guest&checksum=0FA9E2EB249B3EB5DBA108E3AC44CCA3).].
 
-## Model assumptions, robust methods
+## Inference and challenges
 
-Linear regression has a variety of [model assumptions](https://en.wikipedia.org/wiki/Linear_regression#Assumptions). Following these is less important when using the model for predictions compared to making inferences^[At least to the extent that satisfying them doesn't improve your predictions, or suggest a different model type may be more appropriate.]. If you are interpretting the coefficients as representions of the value-add associated with components of a product, model assumptions matter. 
-
-Transformations are often applied to the data to help satsify these assumptions and minimize the impact of outliers and influential points However (important in the pricing analysis context) such modification alters the meaning of the coefficients^[E.g. a log transform on an input changes the interpretation of the coefficient to be something closer to dollar per percentage change of input.]. The analyst may also opt to use an optimization algorithm that produces estimates [robust](https://en.wikipedia.org/wiki/Robust_regression) to influential points and violations of model assumptions. Using robust regression, our model is:
+In evaluating the impact of a component on the price, we don't want *just* an estimate of the magnitude of the impact. Instead we want a measure of the  likely range the estimate falls within. The traditional way to compute this is by using the standard error associated with our estimate.
 
 ```{r}
-mod_sqft_robust <- MASS::rlm(Sale_Price ~ Gr_Liv_Area, data = ames)
+mod_sqft %>% 
+  broom::tidy() %>% 
+  select(term, estimate, std.error) %>% 
+  mutate_if(is.numeric, round, 1) %>% 
+  knitr::kable()
 ```
 
-$$
-\operatorname{Sale\_Price} = 15500.4 + 108.1(\operatorname{Gr\_Liv\_Area}) + \epsilon
-$$
+We can do *{coefficient estimate} +/- 2*{standard error of estimate}* to get a 95% confidence interval for where we believe the 'true' coefficient estimate for `Gr_Liv_Area` falls. In this case, this means that across our observations, the mean price change per square foot (holding all other things equal) is roughly between 108 and 116^[Note there are more modern approaches to estimating this range using bayesian or simulation based methods.].
 
-## The tug-of-war between colinear inputs
+### Violation of model assumptions
 
-Let's add to our (robust regression) model a new variable: number of bathrooms represented by the `bathrooms` variable. 
+Linear regression has a number of [model assumptions](https://en.wikipedia.org/wiki/Linear_regression#Assumptions). Following these is less important when using the model for predictions compared to for inference^[At least to the extent that satisfying them doesn't improve your predictions, or suggest a different model type may be more appropriate.]. However if you are interpretting the coefficients as representions of the value associated with components of a product, model assumptions *matter.* Some would argue that you don't need to worry too much about any of your assumptions except that your observations are independent of one another. I will leave it up to you and Google to read more on model assumptions^[Model assumptions of linear regression by Ordinary Least Squares is already covered extensively in essentially every tutorial and Introduction to Statistics textbook on regression.].
+
+### The tug-of-war between colinear inputs
+
+Let's add to our regression model another variable, number of bathrooms represented by the `bathrooms` variable. 
+
+```{r model-2vars, results = 'asis'}
+mod_2 <- lm(Sale_Price ~ Gr_Liv_Area + bathrooms, data = ames)
+
+mod_2_latex <- equatiomatic::extract_eq(mod_2, use_coefs = TRUE, coef_digits = 0)
+
+mod_2_latex
+```
 
 ```{r}
-mod_2_robust <- MASS::rlm(Sale_Price ~ Gr_Liv_Area + bathrooms, data = ames)
-
-ames %>% 
-  select(Gr_Liv_Area, bathrooms) %>% 
-  cor()
+mod_2 %>% 
+  broom::tidy() %>% 
+  select(term, estimate, std.error) %>% 
+  mutate_if(is.numeric, round, 1) %>% 
+  knitr::kable()
 ```
 
-$$
-\operatorname{Sale\_Price} = 12147 + 87.35(\operatorname{Gr\_Liv\_Area}) + 19178.3(\operatorname{bathrooms}) + \epsilon
-$$
+The coefficient on square footage has decreased -- this is because number of bathrooms and square feet of home are correlated (they have a [correlation](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) of 0.71). Some of the impact on home price that previously existed entirely in the coefficient for `Gr_Liv_Area` is now shared with the related `bathrooms` variable. Also, the `std.error` on `Gr_Liv_Area` has increased -- representing greater uncertainty as to the impact of the variable within the model (compared to the prior simple linear regression example).
 
-Notice the coefficient on square footage has decreased -- this is because number of bathrooms and square feet of home are highly correlated (they have a [correlation](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) of 0.71). The new estimates are created while taking more factors into account. Some of the impact on home price that previously existed entirely in the coefficient for `Gr_Liv_Area` is now shared with the highly related `bathrooms` variable. This phenomena can lead to unintuitive results.
+
+Let's consider a model with another variable added: `TotRms_AbvGrd`: the total number of rooms (above ground and excluding bathrooms) in the home, which is also  correlated with `Gr_Liv_Area` and number of `bathrooms` (correlation of ~0.8 and ~0.6 respectively).
+
+```{r model-3-variables, results = 'asis'}
+mod_3 <- lm(Sale_Price ~ Gr_Liv_Area + bathrooms + TotRms_AbvGrd, data = ames) 
+
+mod_3 %>% 
+  equatiomatic::extract_eq(use_coefs = TRUE, coef_digits = 0, terms_per_line = 2, wrap = TRUE)
+```
 
 ```{r}
-MASS::rlm(Sale_Price ~ Gr_Liv_Area + bathrooms + Bedroom_AbvGr, data = ames)
-
-MASS::rlm(Sale_Price ~ Bedroom_AbvGr, data = ames) %>% 
-  summary()
-
-ames %>% 
-  dplyr::select(where(is.numeric)) %>% 
-  corrr::correlate() %>% 
-  corrr::rearrange() %>% 
-  corrr::rplot()+
-  scale_x_discrete(guide = guide_axis(angle = 90))
-
-library(corrr)
-ames %>% 
-  dplyr::select(contains(c("SF", "Area"))) %>% 
-  corrr::correlate() %>% 
-  corrr::rearrange(method = "HC") %>%
-  corrr::rplot()+
-  scale_x_discrete(guide = guide_axis(n.dodge = 2))
+mod_3 %>% 
+  broom::tidy() %>% 
+  select(term, estimate, std.error) %>% 
+  mutate_if(is.numeric, round, 1) %>% 
+  knitr::kable()
 ```
 
-For example, let's consider another variable: `Bedroom_AbvGr` which represents the number of bedrooms in the home (excluding those in the basement). If we build a robust simple linear regression model, we see there is a 
+Notice the coefficient on `TotRms_AbvGrd` is negative at *-11792.2*. This doesn't mean houses with more bedrooms are associated with negative home prices. Though it suggests a house with the same square footage and number of bathrooms will be less expensive if it has more rooms^[Perhaps representing a preference for larger rooms or open space among buyers or a confounding effect with some other variable. For the purposes of this post i simply want to point out how coefficient values can vary under conditions of colinearity.]. 
 
-e see the estimate for the coefficient (which is also highly correlated with `number of bathrooms` and `square feet`) is actually negative. __MODEL WITH THREE VARIABLES__ This doesn't mean houses with more bedrooms are associated with negative house prices. Though it suggests a house with the same square footage and number of bathrooms will be less expensive if it has more bedrooms (perhaps representing a preference for larger rooms / open space among buyers). 
+**Theoretical challenge:**
 
-Typical linear regression models feature this tug-of-war like optimization whereby correlated variables share (/ battle over) a general influence on the model. At times this causes similar variable to seem to have opposing impacts. When evaluating coefficients for pricing analysis exercises^[Where you care about the individual parameter estimates and want them to be meaningful.] this behavior has potential drawbacks^[This may also be beneficial -- it depends :-/]:
+Pretend we put in another variable: `half_bathrooms` that represented the number of half bathrooms in the home. However our previous variable `bathrooms` already included both full and half bathrooms. This presents a theoretical problem for the model: bathrooms would be represented in two different variables that have a *necessary* overlap with one another. Our understanding of the value of a bathroom as its coefficient value then becomes less unclear. Hence the importance of being particularly thoughtful of the variables you input into the model and avoiding variables that roughly duplicate one another. Beyond this *theoretical challenge*, duplicated or highly associated inputs also create *numeric challenges*. The remainder of this post will be focused on numeric challenges and considerations in fitting regression models that can be applied broadly (but that are particularly important in pricing analysis).
 
-* As you increase the number of variables in the model, this effect can make for models with a high degree of instability / variance in the parameter estimates -- meaning that the coefficients in your model could change dramatically even from small changes in the training data^[This is what "variance" means in the bias-variance trade-off common in model development.]
-* You may want to limit methods that result in models with unintuitive variable relationships (like those discussed where highly related factors have coefficients that appear to act in opposing directions).
+**Numeric challenge:**
 
-### Remedies
+Linear regression models feature this 'tug-of-war' between the magnitude of coefficients whereby correlated variables share^[/ battle over] general influences in the model. At times this causes similar variables to seem to have opposing impacts[^2].  When evaluating coefficients for pricing analysis exercises^[Where you care about the individual parameter estimates and want them to be meaningful.] this competition between coefficients has potential drawbacks^[This may also be beneficial -- just depends :-/]:
 
-Two potential approaches:
+* As you increase the number of variables in the model, colinearity can make for models with a high degree of instability / variance in the parameter estimates -- meaning that the coefficients in your model (and your resulting predictions) could change dramatically even from small changes in the training data^[This is what "variance" means in the bias-variance trade-off common in model development. This may also be referred to as instability in the model or parameter estimates.], which undermines confidence in estimates.
+* You may want to limit methods that result in models with unintuitive variable relationships (e.g. where related factors have coefficients that appear to act in opposing directions).
 
-* *Regularization*: puts constraints on the linear model that discourage high levels of variance in your coefficient estimates. See the section [Regularization and colinear variables] for a more full discussion on how L1 & L2 penalties affect estimates for colinear model inputs.
-* *Bayesian approaches*: can use [priors](link to definition of priors in linear model) and rigorous estimation procedures to limit  [overfitting](link to overfitting) and subdue extreme estimates.
+[^2]: A common rule of thumb for when variables are 'too correlated' is 0.90 -- at least in regression contexts and cases where you are focused on inference. In other contexts (e.g. similar to those that appear on Kaggle competitions) this threshold can be much higher. However, as discussed, lower levels of correlation can still contribute to instability in your coefficient estimates
 
-Each will modulate coefficient estimates differently. The figure below shows the coefficient estimates when using each of these methods.
+## Improving model fit, considerations
 
-__plot of coefficient estimates from different models__
+I do not discuss the topic of Variable Selection, but highly recommend the associated chapter in the online textbook [Feature Engineering and Selection](http://www.feat.engineering/selection.html) by Max Kuhn and Kjell Johnson.
 
-Note differences...
+**Data transformations**
 
-I typically do...
+Before modeling, transformations to the underlying data are often applied for one of several reasons:
 
+* To help satsify model assumptions or to minimize the impact of outliers and influential points on estimates. 
+* To improve the fit of the model.
+* To help with model interpretation^[An example of this may be standardizing the underlying data so that the coefficient estimates may be more directly compared to one another (as the underlying data is all on the same scale).].
+* To facilitate preprocessing requirements important to the fitting procedure^[Standardizing the data is also important for many fitting methods, e.g.  regulrization.].
 
-## Significance vs effect size
+Important in pricing contexts, transformations to the data alter the meaning of the coefficients[^3]. Data transformations may improve model fit, but may complicate coefficient interpretability. In some cases this may be helpful in other cases it may not -- it all depends on the aims of the model and the types of interprations the analyst is hoping to make[^4]. As part of an internal presentation given at NetApp on pricing, I describe some common variable transformations and how these affect the resulting interpretation of the coefficients:
 
-Look for variables that are important but not overly colinear with house size. E.g. lot size.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dqrkIIziBLE?start=398" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+[^3]: E.g. a log transform on an input alters the interpretation of the coefficient to be something closer to dollars per percentage point change of input. Log on target means percentage change in price per unit change in input. If you take the log of both your inputs and your target, the coefficient represents percent change in x related to percent change in y, also known as an 'elasticity' model in econometrics.
+
+[^4]: There may be a preference to speak in the simplest terms: change in price as a function of unit change in component -- which may put pressure on the analyst to limit data transformations. It is the analysts job then to strike the correct balance between producing a model that fits the data and one that can be understood by stakeholders.
+
+**More sophisticated Machine Learning Methods:**
+
+When using more sophisticated machine learning techniques the term *data transformation* is sometimes supplanted by the term *feature engineering* (though the latter typically suggests more numerous or more complicated changes to input data). Some machine learning techniques^[Neural networks in particular.] can also identify hard to find relationships or obviate the need for complex data transformations that would be required to produce good model fits with a linear model^[Many non-linear methods still have sophisticated pre-processing requirements. Though these are sometimes more generic -- meaning less work to customize between problems to reach at least some minimum level of fit between problems (again, in some contexts).]. This may save an analyst time or allow them to produce models with a better fit but may come at a cost to ease of model interpretability (important for analyzing prices). See the section [Interpretability of machine learning methods] for a brief discussion. For this post, I will stick to linear models.
+
+**Fitting procedures**
+
+The analyst may also opt to use a fitting technique other than the standard [Ordinary Least Squares](https://en.wikipedia.org/wiki/Ordinary_least_squares#:~:text=In%20statistics%2C%20ordinary%20least%20squares,in%20a%20linear%20regression%20model.&text=Under%20these%20conditions%2C%20the%20method,the%20errors%20have%20finite%20variances.) (OLS)^[Some of what I read on hedonic modeling seemed to discourage the use of methods other than Ordinary Least Squares (e.g. Weighted Least Squares) but I've found other methods to be helpful.]. Alternatives to OLS may be more robust to model assumptions and influential points or tend to produce more stable estimates. A few options:
+
+* *Regularization*: puts constraints on the linear model that discourage high levels of variance in your coefficient estimates. See the section [Regularization and colinear variables] for a more full discussion on how L1 & L2 penalties affect estimates for colinear model inputs differently^[Regularization with an L1 penalty provides the added bonus of also doing variable selection.].
+* *Bayesian approaches*: can use [priors](https://en.wikipedia.org/wiki/Prior_probability) and rigorous estimation procedures to limit [overfitting](https://en.wikipedia.org/wiki/Overfitting) and subdue extreme estimates.
+* *Robust regression*: typically refers to using weighted least squares (or similar methods) which gives different amounts of weight to different observations (typically to reduce the weight of extreme and influential points).
+
+Each of these fitting procedures has different advantages and disadvantages and will modulate coefficient estimates differently^[For robust methods and regularization, there are less established methods for producing confidence intervals. You may need to use simulation methods (which are more computationally intensive).].
 
 # Closing note
 
-You can use regression models to evaluate the impact of different factors on price. It is important to consider how coefficient estimates will respond to violations of your model assumptions, particularly those of multi-colinearity and to use estimation techniques that are appropriate for your problem. 
+You can use regression models to evaluate the impact of different factors on price. However it is important to consider how coefficient estimates will respond to your particular input data (e.g. multi-colinearity of your inputs or violations of your model assumptions) and to use techniques that will produce an appropriate model fit for your particular need. In pricing contexts in particular you should consider the types of inferences you will be asked to make and build your model in a way that also fits your business requirements. 
 
-If you have questions or feedback feel free to direct message me at [brshallo](link). I will cover the other questions noted in [Problem Context] in a series of upcoming posts.
+Some tips for building models for inference in pricing contexts: 
 
-# How have influential factors changed over time?
+* If your model doesn't explain a high proportion of the data, be careful what you say about the respective value of components to stakeholders.
+* Getting a good model fit should be a driving force. However, in a similar way to how you may prefer fewer variables or a more simple modeling technique, you should also prefer fewer and less complicated variable transformations.
+* When evaluating the influence of the components of your product, review the variability in your coefficient estimates and not just the estimates themselves.
+* Consider building linear models using multiple model fit techniques. Then review the coefficient estimates across them^[I tend to rely heavily on regularization techniques.]. 
+* Even if you plan on using a linear model, using a stock non-linear machine learning model can be helpful as a sanity check. If model performance is not hugely different from your linear model, you are fine, if it is substantially different that may mean there is some important non-linear relationship you are missing and need to identify.
 
-If you want to evaluate a general impact of year / time on price, you could simply include it as a variable in the model and see the associated variable. If you want to evaluate how the influence of factors has *changed* over time however you could simply build models between different years and compare the coefficient estimates.
-
-The chart below shows coefficient estimates for variables ... across ... years in the data. I used method ... to build the model.
-
-Have something about function for modulating further back items on pricing...
-
-__Chart of coefficients for each year__
-
-Note that... estimates have changed... across years. To evaluate if a variables change is significant between two years we could use a statistical test (link to SO article that describes methodology for comparing if difference between coefficients is statistically signficant). 
-
-To more rigorously evaluate which variables are trending up or down in their influence on price we could build a linear regression model of the coefficient estimates against year and compare the magnitude and/or significance of the change in coefficients across years. 
-
-__Chart of trend of each variable up or down over time__
-
-...
-
-# Identify abnormalities / abnormalities?
-
-Models can also be used to identify anomalies in sales by identifying individual sales that deviate significantly from expected sale value. This outlier detection can be useful for identifying methods to further improve the model (i.e. which piece(s) of information would explain the outliers in price you are seeing) or for identifying customer outliers that may deviate from norms in ways worthy of investigation.
-
-...
+Stay tuned for [Future pricing posts] on related topics. 
 
 # Appendix
 
@@ -191,6 +202,15 @@ The final price paid may also be influenced by a myriad of competing internal in
 * Information on deals closed may be more reliable than information on missed deals
 
 These (or a host of other gaps in information) may make it difficult to define an objective function for identifying optimal price guidelines. 
+
+## Future pricing posts
+
+In a series of posts I will tackle the following questions:
+
+1. How do differences in product components associate with differenes in price? What is the magnitude of the influence of these factors?
+1. How have these factors changed over time?
+1. Which customers fall outside the 'normal' behavior in regard to the price they are receiving?
+1. How can complexities in pricing strategy be captured by a statistically rigorous modeling framework? (E.g. when volume dictates price)
 
 ## Dataset considerations
 
@@ -210,6 +230,19 @@ There are many important differences between home sales and B2B sales that make 
 
 Though for the notes in this post, this didn't matter.
 
+## Interpretability of machine learning methods
+
+In some pricing scenarios, tree-based methods may be particularly well suited to modeling price -- particularly in contexts where the price of a product can be well defined to if-then statements. This may be useful in cases where there is volume pricing -- e.g. the pricing approach is different depending on the amount you are purchasing. Perhaps better though would be cubist models which start as decision trees but then terminate into individual linear models. 
+
+Ignoreing for now figuring out the 'ideal' type of model or feature engineering regiment^[PCA or factor analysis seems like a potentially useful approach in pricing contexts in cases where the variables you have do not clearly represent discrete components of the product -- hopefully PCA would help to identify these implicit components.] for your problem, the typical juxtaposition between linear models and more sophisticated machine learning techniques is in how easy they are to interpret. Sophisticated machine learning methods (sometimes described as 'black-boxes'^[Due to the lack of transparency into how they produce predictions.]) *can* be made to be interpretable. Typically this involves some approach that evaluates how the predictions change in relation to some change in the underlying data. This *prediction focused* way of interpretting a model has the advantage of being more standard across model types. The argument goes that regardless of the structure of the model, you always get predictions, hence you should use these predictions to drive your interpretations of the model. This enables you to compare models -- across things other than just raw performance -- regardless of the type of model you use.
+
+The advantage linear models have is that the *model form itself* is highly interpretable. Unlike other models the parameters of linear models are directly aggregatable. This can be valuable if you need to be explicit on the discrete components that led you to a final price^[E.g. in conversations with either internal or external stakeholders.]. Linear models can generally be understood by a wider audience and also may be viewed as more fair (or at least in places where a price seems unfair, it may be easier to quickly identify where the issue lies^[There is a book 'Weapons of Math Destruction' that points to a lack of interpretability as a chief concern with modern algorithms Cathy O'Neil.]). However, if you end-up building linear models with highly complicated transformations, interactions, or non-linear terms, the interpretation of the model can be so complicated that some of this 'simplicity' advantage starts deteriorates^[May as well use a Machine Learning method at this point.].
+
+In summary, the breakdown of using machine learning models in pricing contexts may be a similar way as it does in other problem spaces:
+
+* If you only care about accuracy of your predictions (i.e. pricing estimates) or want to save time on complex feature engineering more sophisticated machine learning techniques may be valuable. 
+* If you care about interpretability or have audit requirements regarding prices, linear models have a certain advantages. 
+
 ## Regularization and colinear variables
 
 Regularization typically comes in two flavors, either an L1 penalty (lasso regression) or L2 penalty (ridge regression), or some combination of these (elastic net) is applied to the linear model. These penalties provides a cost for larger coefficient which acts to decrease the variance in our estimates[^1]. In conditions of colinear inputs, these two penalties act differently on coefficient estimates of colinear features: 
@@ -221,4 +254,5 @@ Regularization typically comes in two flavors, either an L1 penalty (lasso regre
 
 ## Coefficients of a regularized model
 
-Variable inputs are usually standardized before applying regularization. Hence because inputs are all (essentially) put on the same scale, the coefficient estimates can be directly compared with one another as measures of their relative influence on the target (home price). This ease of comparison may be convenient, though if our goal is interpretting the coefficient estimates in terms of dollar change per unit increase, we may need to transform the coefficients. This is what was done in figure ... by ...
+Variable inputs are usually standardized before applying regularization. Hence because inputs are all (essentially) put on the same scale, the coefficient estimates can be directly compared with one another as measures of their relative influence on the target (home price). This ease of comparison may be convenient, though if our goal is interpretting the coefficient estimates in terms of dollar change per unit increase, we may need to transform the coefficients. 
+
